--- a/XPOS/XPOS_API/appsettings.json
+++ b/XPOS/XPOS_API/appsettings.json
@@ -7,7 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ETG-XALNV00021-;Initial Catalog=XPOS_315; User Id=sa; Password=xsis123"
+    "DefaultConnection": "Server=sqldb;Initial Catalog=XPOS_315; User Id=sa; Password=P@ssword"
+
+    //"DefaultConnection": "Server=ETG-XALNV00021-;Initial Catalog=XPOS_315; User Id=sa; Password=xsis123"
   }
 }
 //Scaffold-DbContext "Server=ETG-XALNV00021-;Initial Catalog=XPOS_315;user id=sa;Password=xsis123" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -force –Verbose
